[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
homepage = "https://github.com/heliaxdev/ibc-middleware"
keywords = ["blockchain", "privacy", "crypto", "protocol", "network"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/heliaxdev/ibc-middleware"

[workspace.dependencies.dur]
version = "0.5.3"
default-features = false

[workspace.dependencies.serde_json]
version = "1.0"
default-features = false

[workspace.dependencies.borsh]
version = "1.2.0"
default-features = false
features = ["derive"]

[workspace.dependencies.either]
version = "1.3"
default-features = false

[workspace.dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]

[workspace.dependencies.ibc-core-router]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-core-router-types]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-core-host-types]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-core-channel-types]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-core-channel]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-primitives]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-app-transfer-types]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]

[workspace.dependencies.ibc-testkit]
git = "https://github.com/permissionlessweb/ibc-rs"
default-features = false
features = ["borsh", "serde"]
