[workspace]
resolver = "2"

members = ["crates/*"]

[workspace.package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
homepage = "https://github.com/heliaxdev/ibc-middleware"
keywords = ["blockchain", "privacy", "crypto", "protocol", "network"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/heliaxdev/ibc-middleware"

[workspace.dependencies]
ibc-core-router = { path = "../ibc-rs/ibc-core/ics26-routing" }
ibc-core-router-types = { path = "../ibc-rs/ibc-core/ics26-routing/types" }
ibc-core-host-types = { path = "../ibc-rs/ibc-core/ics24-host/types" }
ibc-core-channel-types = { path = "../ibc-rs/ibc-core/ics04-channel/types" }
ibc-core-channel = { path = "../ibc-rs/ibc-core/ics04-channel" }
ibc-primitives = { path = "../ibc-rs/ibc-primitives" }
ibc-app-transfer-types = { path = "../ibc-rs/ibc-apps/ics20-transfer/types" }
ibc-testkit = { path = "../ibc-rs/ibc-testkit" }

[workspace.dependencies.dur]
version = "0.5.3"
default-features = false

[workspace.dependencies.serde_json]
version = "1.0"
default-features = false

[workspace.dependencies.borsh]
version = "1.2.0"
default-features = false
features = ["derive"]

[workspace.dependencies.either]
version = "1.3"
default-features = false

[workspace.dependencies.serde]
version = "1.0"
default-features = false
features = ["alloc", "derive"]
