[package]
name = "ibc-middleware-overflow-receive"
description = "IBC middleware that sends amounts overflowing some target to another address"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
ibc-middleware-module = { git = "https://github.com/permissionlessweb/ibc-middleware", branch = "zk-mvp" }
ibc-middleware-module-macros = { git = "https://github.com/permissionlessweb/ibc-middleware", branch = "zk-mvp" }

ibc-app-transfer-types.workspace = true
ibc-core-channel-types.workspace = true
ibc-core-host-types.workspace = true
ibc-core-router.workspace = true
ibc-core-router-types.workspace = true
ibc-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ibc-testkit.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }
