[package]
name = "ibc-middleware-packet-forward"
version = "0.10.0"
description = "IBC packet forward middleware implementation targeting ibc-rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[features]
borsh = ["dep:borsh"]

[dependencies]
ibc-middleware-module = { path = "../module" }
ibc-middleware-module-macros = { path = "../module-macros" }

borsh = { workspace = true, optional = true }
dur.workspace = true
either.workspace = true
ibc-app-transfer-types.workspace = true
ibc-core-channel-types.workspace = true
ibc-core-channel.workspace = true
ibc-core-host-types.workspace = true
ibc-core-router-types.workspace = true
ibc-core-router.workspace = true
ibc-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ibc-testkit.workspace = true
